text and language

--- a/TextandLanguage.ipynb
+++ b/TextandLanguage.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,8 +992,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get the name of the languages for codes"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1002,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,11 +1018,233 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "language_code_name_pairs['code', 'name'] = group.apply(lambda x : language_detect(x.Language, x.user_text), axis = 1)"
+    "language_code_name_pairs['code'], language_code_name_pairs['name'] = zip(*group_val.apply(lambda x : language_detect(x.Language, x.user_text), axis = 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "language_code_name_pairs.to_csv('s3://recsys-challenge-2020/language_code_name_pairs.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get input of format: clean text, language name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweet_text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>envivo buenas noches comienza una nueva edición de 24horascentral junto a iván núñez unk sigue la señal en vivo 24play unk t co mi3yduas2f t co y6qu6gwdcl</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>celebrate lunar new year with the new tigeress and swift outfits in the item shop now t co ojiwhkcp5o</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>the media tend not to feature abortion survivors like claire culwell a woman whose story has in recent years captivated the pro life world t co cowpnipsgk</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>porto alegre tem novidade na agenda unk 14 de março eu toco no teatro do sesc _ rs e já tô muito ansiosa pra rever todo mundo ingressos aqui t co ihrnvhrb1p t co hyjf3917d1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>karnataka boy who guided ambulance during floods to be awarded on republicday t co qotzvndlme t co hrgzbclncv</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                                                                                                     tweet_text\n",
+       "0  envivo buenas noches comienza una nueva edición de 24horascentral junto a iván núñez unk sigue la señal en vivo 24play unk t co mi3yduas2f t co y6qu6gwdcl                  \n",
+       "1  celebrate lunar new year with the new tigeress and swift outfits in the item shop now t co ojiwhkcp5o                                                                       \n",
+       "2  the media tend not to feature abortion survivors like claire culwell a woman whose story has in recent years captivated the pro life world t co cowpnipsgk                  \n",
+       "3  porto alegre tem novidade na agenda unk 14 de março eu toco no teatro do sesc _ rs e já tô muito ansiosa pra rever todo mundo ingressos aqui t co ihrnvhrb1p t co hyjf3917d1\n",
+       "4  karnataka boy who guided ambulance during floods to be awarded on republicday t co qotzvndlme t co hrgzbclncv                                                               "
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleaned_text_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>Language</th>\n",
+       "      <th>tweet_timestamp</th>\n",
+       "      <th>engaging_user_id</th>\n",
+       "      <th>reply_timestamp</th>\n",
+       "      <th>user_text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>19856362</td>\n",
+       "      <td>06D61DCBBE938971E1EA0C38BD9B5446</td>\n",
+       "      <td>1580947200</td>\n",
+       "      <td>12A1AF0088C5B4FCBFA024D4A1971323</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[CLS] # ENVIVO | ¡ Buenas noches! Comienza una nueva edición de # 24HorasCentral junto a Iván Núñez... [UNK] Sigue la señal en vivo # 24Play [UNK] https : / / t. co / mi3yDUaS2F https : / / t. co / Y6qU6gwdCL [SEP]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>70014084</td>\n",
+       "      <td>D3164C7FBCF2565DDF915B1B3AEFB1DC</td>\n",
+       "      <td>1580947200</td>\n",
+       "      <td>C836F432B0FC7847C2C753949C51B961</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[CLS] Celebrate Lunar New Year with the new Tigeress and Swift Outfits in the Item Shop now! https : / / t. co / oJIWHkCp5o [SEP]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>45640141</td>\n",
+       "      <td>D3164C7FBCF2565DDF915B1B3AEFB1DC</td>\n",
+       "      <td>1580947200</td>\n",
+       "      <td>77309DE08AB631D8224254D33648F287</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[CLS] The media tend not to feature abortion survivors like Claire Culwell, a woman whose story has in recent years captivated the pro - life world.. https : / / t. co / COWpNipsgk [SEP]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>103063682</td>\n",
+       "      <td>ECED8A16BE2A5E8871FD55F4842F16B1</td>\n",
+       "      <td>1580947200</td>\n",
+       "      <td>91363F238C79DAEE42E2A2C97A5F8E7C</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[CLS] porto alegre, tem novidade na agenda [UNK] 14 de março eu toco no teatro do @ sesc _ rs e já tô muito ansiosa pra rever todo mundo. ingressos aqui : https : / / t. co / ihrnvHrB1P https : / / t. co / HyJf3917d1 [SEP]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>54351326</td>\n",
+       "      <td>D3164C7FBCF2565DDF915B1B3AEFB1DC</td>\n",
+       "      <td>1580947200</td>\n",
+       "      <td>EFA4C5B62E097EB203F8AFDC470AEB27</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[CLS] Karnataka boy, who guided ambulance during floods, to be awarded on # RepublicDay.. https : / / t. co / qOtzvndLmE https : / / t. co / HRGZbClnCv [SEP]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       index                          Language  tweet_timestamp  \\\n",
+       "0  19856362   06D61DCBBE938971E1EA0C38BD9B5446  1580947200        \n",
+       "1  70014084   D3164C7FBCF2565DDF915B1B3AEFB1DC  1580947200        \n",
+       "2  45640141   D3164C7FBCF2565DDF915B1B3AEFB1DC  1580947200        \n",
+       "3  103063682  ECED8A16BE2A5E8871FD55F4842F16B1  1580947200        \n",
+       "4  54351326   D3164C7FBCF2565DDF915B1B3AEFB1DC  1580947200        \n",
+       "\n",
+       "                   engaging_user_id  reply_timestamp  \\\n",
+       "0  12A1AF0088C5B4FCBFA024D4A1971323 NaN                \n",
+       "1  C836F432B0FC7847C2C753949C51B961 NaN                \n",
+       "2  77309DE08AB631D8224254D33648F287 NaN                \n",
+       "3  91363F238C79DAEE42E2A2C97A5F8E7C NaN                \n",
+       "4  EFA4C5B62E097EB203F8AFDC470AEB27 NaN                \n",
+       "\n",
+       "                                                                                                                                                                                                                        user_text  \n",
+       "0  [CLS] # ENVIVO | ¡ Buenas noches! Comienza una nueva edición de # 24HorasCentral junto a Iván Núñez... [UNK] Sigue la señal en vivo # 24Play [UNK] https : / / t. co / mi3yDUaS2F https : / / t. co / Y6qU6gwdCL [SEP]          \n",
+       "1  [CLS] Celebrate Lunar New Year with the new Tigeress and Swift Outfits in the Item Shop now! https : / / t. co / oJIWHkCp5o [SEP]                                                                                               \n",
+       "2  [CLS] The media tend not to feature abortion survivors like Claire Culwell, a woman whose story has in recent years captivated the pro - life world.. https : / / t. co / COWpNipsgk [SEP]                                      \n",
+       "3  [CLS] porto alegre, tem novidade na agenda [UNK] 14 de março eu toco no teatro do @ sesc _ rs e já tô muito ansiosa pra rever todo mundo. ingressos aqui : https : / / t. co / ihrnvHrB1P https : / / t. co / HyJf3917d1 [SEP]  \n",
+       "4  [CLS] Karnataka boy, who guided ambulance during floods, to be awarded on # RepublicDay.. https : / / t. co / qOtzvndLmE https : / / t. co / HRGZbClnCv [SEP]                                                                   "
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_lda_input.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_clean_input = pd.concat([train_lda_input[['Language']], cleaned_text_train], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_clean_input = pd.concat([val_lda_input[['Language']], cleaned_text_val], axis=1)"
    ]
   },
   {
@@ -1024,7 +1253,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "language_code_name_pairs"
+    "all_features = [\"Language\"]\n",
+    "\n",
+    "test_language = pd.read_csv(\"s3://recsys-challenge-2020/val.tsv\", encoding=\"utf-8\",\n",
+    "                    names = all_features, usecols= [7], sep=\"\\x01\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_clean_input = pd.concat([test_language[['Language']], cleaned_text_test], axis=1)"
    ]
   }
  ],
