text and language

--- a/TextandLanguage.ipynb
+++ b/TextandLanguage.ipynb
@@ -1027,6 +1027,84 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>code</th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>022EC308651FACB02794A8147AEE1B78</td>\n",
+       "      <td>en</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0331BF70E606D62D92C96CE9AD71A7CF</td>\n",
+       "      <td>fi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>06BEAB41D66CCFF329D1ED8BA120A6C2</td>\n",
+       "      <td>he</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>06D61DCBBE938971E1EA0C38BD9B5446</td>\n",
+       "      <td>pt</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>125C57F4FA6D4E110983FB11B52EFD4E</td>\n",
+       "      <td>ko</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               code name\n",
+       "0  022EC308651FACB02794A8147AEE1B78  en \n",
+       "1  0331BF70E606D62D92C96CE9AD71A7CF  fi \n",
+       "2  06BEAB41D66CCFF329D1ED8BA120A6C2  he \n",
+       "3  06D61DCBBE938971E1EA0C38BD9B5446  pt \n",
+       "4  125C57F4FA6D4E110983FB11B52EFD4E  ko "
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "language_code_name_pairs.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
    "outputs": [],
@@ -1249,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1261,11 +1339,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "test_clean_input = pd.concat([test_language[['Language']], cleaned_text_test], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_input = pd.merge(train_clean_input, language_code_name_pairs, how = 'inner',\\\n",
+    "left_on = 'Language', right_on = 'code')[['tweet_text', 'name']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_input = pd.merge(val_clean_input, language_code_name_pairs, how = 'inner',\\\n",
+    "left_on = 'Language', right_on = 'code')[['tweet_text', 'name']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_input = pd.merge(test_clean_input, language_code_name_pairs, how = 'inner',\\\n",
+    "left_on = 'Language', right_on = 'code')[['tweet_text', 'name']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_input.to_csv('s3://recsys-challenge-2020/train_input.csv', index = False)\n",
+    "val_input.to_csv('s3://recsys-challenge-2020/val_input.csv', index = False)\n",
+    "test_input.to_csv('s3://recsys-challenge-2020/test_input.csv', index = False)"
    ]
   }
  ],
